--- a/php-vacxin/error.html
+++ b/php-vacxin/error.html
@@ -1,4 +1,5 @@
 <title>ERROR</title>
+<meta charset="utf-8">
 <div style="text-align: center ;color: blue;font-size: 20px">
     Chức năng này đang được hoàn thiện xin vui lòng chờ bản cập nhật mới nhất
 
